--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         
         <!-- Background Imagem (HERO.JPG) -->
         <div class="absolute inset-0 z-0">
-            <img src="Hero.jpg" alt="Cão de Guarda K9" class="w-full h-full object-cover opacity-60">
+            <img src="hero.jpg" alt="Cão de Guarda K9" class="w-full h-full object-cover opacity-60">
             <!-- Overlay Gradiente para garantir leitura do texto -->
             <div class="absolute inset-0 bg-gradient-to-r from-black via-black/80 to-transparent z-10"></div>
             <div class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent z-10"></div>
@@ -393,3 +393,4 @@
     </script>
 </body>
 </html>
+
